refactor: Simplify outline generation to single iteration
The outline generation process has been refactored from a streaming, multi-iteration approach to a single-iteration model. This change simplifies the frontend logic and backend API.

The `generateDetailedOutlineStream` and `refineDetailedOutlineStream` functions have been replaced by a new `generateSingleOutlineIteration` function. This new function handles one cycle of creation and critique, simplifying the overall workflow.

Backend API endpoints and associated prompts have been updated to reflect this change, removing streaming logic for outline generation and focusing on a single, synchronous response.

Frontend components have been adjusted to call the new single-iteration function. Styling for readability has also been improved with additional color classes.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
       ::-webkit-scrollbar-thumb:hover {
         background: rgba(100, 116, 139, 0.7); /* slate-500/70 */
       }
+
+      /* Readability & Contrast Improvement */
+      .text-slate-400 {
+        color: #cbd5e1; /* slate-300 */
+      }
+      .text-slate-500 {
+        color: #94a3b8; /* slate-400 */
+      }
+
     </style>
   <script type="importmap">
 {
